--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -1,4 +1,4 @@
-.thing-form {
+.stock-form {
     margin: 20px 0;
 }
 
@@ -27,4 +27,10 @@
     padding: 30px 0;
     margin-top: 70px;
     border-top: 1px solid #E5E5E5;
+}
+
+.stock-list-item p{
+    font-size: 1.5em;
+    margin: 0 2px 5px 0;
+    display: inline;
 }
